# snake_net

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  start_2_clients.cmd
SnakeNet/: CMakeLists.txt  main.cc
src/: gdi_renderer.cpp  gdi_renderer.h  main.cc  main.cpp  renderer.h  snake_api.h  vectorwar.cpp
src/util/: log.h
src/v2/: game_state.cc  game_state.h  grid_cell.cc  grid_cell.h
test/: game_state.cc  grid_cell.cc
